[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "quant-alpha"
version = "1.0.0"
description = "Systematic macro quant alpha research toolkit"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}

dependencies = [
    "numpy>=2.0",
    "scipy>=1.14",
    "polars>=1.0",
    "hmmlearn>=0.3.2",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
    "cvxpy>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",    # parallel test execution
    "ruff>=0.4",            # linter / formatter
    "mypy>=1.10",
    "types-scipy",
]

[tool.pytest.ini_options]
testpaths      = ["src/python/tests"]
addopts        = "--cov=src/python --cov-report=xml --cov-report=term-missing --cov-fail-under=100 -v"
python_files   = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source   = ["src/python"]
omit     = ["src/python/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
    "raise NotImplementedError",
]

[tool.ruff]
line-length    = 100
target-version = "py313"
select         = ["E", "F", "I", "N", "UP", "ANN", "B", "SIM"]
ignore         = ["ANN101", "ANN102"]

[tool.mypy]
python_version         = "3.13"
strict                 = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/python"]
